# burn-mnist

./: .gitignore  Cargo.toml  README.md
src/: data.rs  inference.rs  main.rs  model.rs  training.rs
